# vtc-py

./: .coveragerc  .gitignore  .gitmodules  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg  setup.py
docs/: .buildinfo  api.html  genindex.html  guide.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/vtc/: _framerate.html  _premiere_ticks.html  _range.html  _timecode.html
docs/_sources/: api.rst.txt  guide.rst.txt  index.rst.txt
docs/_static/: README.MD
occlib/: __init__.py
reports/: tests_junit.xml
vtc/: __init__.py  _consts.py  _framerate.py  _premiere_ticks.py  _range.py  _timecode.py  _timecode_dropframe.py  _timecode_parsers.py  _timecode_sections.py
zdevelop/tests/: conftest.py  test_example.py  test_framerate.py  test_premiere_ticks.py  test_range.py  test_timecode.py
zdocs/source/: conf-template  conf.py  guide.rst  index.rst
