[version]
target = 0.0
release = 0.0.8

[testing]
coverage_required = 1.0

[metadata]
name = vtc
description = A SMTPE video timecode library for Python
author = Billy Peake
url = https://github.com/opencinemac/vtc-py
classifiers = 
	Development Status :: 4 - Beta
	
	Intended Audience :: Developers
	Topic :: Multimedia
	Topic :: Multimedia :: Video
	Topic :: Multimedia :: Video :: Non-Linear Editor
	
	License :: OSI Approved :: MIT License
	
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3 :: Only

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
	pytest
dependency_links = 

[options.extras_require]
dev = 
	black
	autopep8
lint = 
	black
	flake8
	mypy
doc = 
	sphinx
	sphinx-autodoc-typehints
	sphinx_rtd_theme
build = 
	twine
	wheel
test = 
	pytest-cov
	pytest-sugar
	pytest-html

[flake8]
max-line-length = 88
max-complexity = 10
exclude = 
	*/venvs/*,
	docs/conf.py,
	build,
	dist,
	.git,
	__pycache__,
	tests,
	.tox,
	.eggs,
	.coverage,
	*.egg,
	*_cache
	tests/_reports
	zdevelop/scratch

[pep8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
show_error_context = True
no_implicit_optional = True
warn_redundant_casts = True

[mypy-pytest,setuptools]
ignore_missing_imports = True

[mypy-zdevelop.scratch.*]
ignore_errors = True

[tool:pytest]
testpaths = 
	zdevelop/tests
	zdocs/source
	README.md
addopts = 
	--cov
	--cov-report=html
	--cov-report=xml:zdevelop/tests/_reports/coverage.xml
	--html=zdevelop/tests/_reports/test_results.html
	--self-contained-html
	--doctest-modules
	--doctest-glob="*.rst"
	--doctest-glob="*.md"

[coverage:run]
source = vtc

[coverage:html]
directory = zdevelop/tests/_reports/coverage
title = coverage report for vtc

[build_sphinx]
project = vtc
copyright = '2021, Open Cinema Collective'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

